--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Adam Counihan</title>
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
