--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Adam Counihan's portfolio website showcasing projects, skills, and experiences. Explore my work and get in touch!" />
+    <meta name="google-site-verification" content="TvUa-bCv_xfywgHkxrqPFV3zfWeABPywy-zMl7Fi15o" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
