feat: add Open Graph meta tags and update title

--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Adam Counihan's portfolio website showcasing projects, skills, and experiences. Explore my work and get in touch!" />
-    <meta name="google-site-verification" content="TvUa-bCv_xfywgHkxrqPFV3zfWeABPywy-zMl7Fi15o" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-      <link rel="manifest" href="/site.webmanifest">
-    <title>Adam Counihan</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Adam Counihan's portfolio showcasing projects, skills, and experiences. Explore my work and get in touch!" />
+  <meta name="google-site-verification" content="TvUa-bCv_xfywgHkxrqPFV3zfWeABPywy-zMl7Fi15o" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Adam Counihan Portfolio">
+  <meta property="og:description" content="Explore Adam Counihan's portfolio showcasing creative projects, technical skills, and professional experiences.">
+  <meta property="og:image" content="https://adamlcounihan.netlify.app/assets/preview-image.png">
+  <meta property="og:url" content="https://adamlcounihan.netlify.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Fonts and Favicons -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <title>Adam Counihan Portfolio</title>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
