--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
+  <link rel="preload" href="/src/assets/background.webp" as="image">
   <title>Adam Counihan Portfolio</title>
 </head>
 <body>
