feat: change preview image
- fix incorrect location
- create new preview image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Adam Counihan Portfolio">
   <meta property="og:description" content="Explore Adam Counihan's portfolio showcasing creative projects, technical skills, and professional experiences.">
-  <meta property="og:image" content="https://adamlcounihan.netlify.app/assets/preview-image.png">
+  <meta property="og:image" content="https://adamlcounihan.netlify.app/preview-image.webp">
   <meta property="og:url" content="https://adamlcounihan.netlify.app/">
   <meta property="og:type" content="website">
 
