chore: update og links to new url

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Adam Counihan Portfolio">
   <meta property="og:description" content="Explore Adam Counihan's portfolio showcasing creative projects, technical skills, and professional experiences.">
-  <meta property="og:image" content="https://adamlcounihan.netlify.app/preview-image.png">
-  <meta property="og:url" content="https://adamlcounihan.netlify.app/">
+  <meta property="og:image" content="https://adamcounihan.dev/preview-image.png">
+  <meta property="og:url" content="https://adamcounihan.dev/">
   <meta property="og:type" content="website">
 
   <!-- Fonts and Favicons -->
