fix: background no longer moves

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Adam Counihan's portfolio showcasing projects, skills, and experiences. Explore my work and get in touch!" />
   <meta name="google-site-verification" content="TvUa-bCv_xfywgHkxrqPFV3zfWeABPywy-zMl7Fi15o" />
 
