chore: update index.html
Add canonical URL and preload hero-img.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <meta property="og:url" content="https://adamcounihan.dev/">
   <meta property="og:type" content="website">
 
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://adamcounihan.dev/" />
+
   <!-- Fonts and Favicons -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
@@ -21,6 +24,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="preload" href="/src/assets/background.webp" as="image">
+  <link rel="preload" href="/src/assets/hero-img.webp" as="image">
   <title>Adam Counihan Portfolio</title>
 </head>
 <body>
